--- a/index.html
+++ b/index.html
@@ -4,17 +4,52 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sketch</title>
+    <title>Graph SIM</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
-
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
-    <script src="sketch.js"></script>
+    <div class="dashboard">
+      <div class="control-board">
+        <h1>Control Board</h1>
+        <div>
+          <input type="number" id="generate-input" min="3" max="10" />
+          <button id="generate-btn" onclick="generateNode()" disabled="true">
+            Generate
+          </button>
+        </div>
+        <div>
+          Vertex 1
+          <input type="number" id="node-1-input" max="10" min="3" />
+          Vertex 2
+          <input type="number" id="node-2-input" max="10" min="3" />
+          <button id="connect-btn" onclick="connectNode()" disabled="true">
+            Connect
+          </button>
+        </div>
+        <div>
+          <button disabled="true">Execute Deadlock Algorithm</button>
+        </div>
+        <div>
+          <button id="create-btn" onclick="createGraph()">Create</button>
+          <button id="delete-btn" disabled="true" onclick="deleteGraph()">
+            Delete
+          </button>
+        </div>
+      </div>
+      <div class="sketch-board">
+        <h1>Sketch Board</h1>
+      </div>
+    </div>
+    <script src="theme/theme.js"></script>
     <script src="types/Node.js"></script>
     <script src="types/Graph.js"></script>
+    <script src="utils/NodeGenerator.js"></script>
+    <script src="utils/GraphSimHandler.js"></script>
+    <script src="sketch.js"></script>
+    <script></script>
   </body>
 </html>
